<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- chiq string definition -->
    <string name="app_name">chiqbuy</string>
    
    <!-- demo string definition -->
    <string name="test_inject">测试注解</string>
    <string name="test_click">测试单击事件</string>
    <string name="test_longclick">测试长按事件</string>
    <string name="test_db">数据库模块</string>
    <string name="test_http">http模块</string>
    <string name="test_prefer">设置模块</string>
    <string name="test_preference">测试preference</string>
    <string name="test_propertities">测试propertities</string>
    <string name="test_image">图片缓存模块</string>
    <string name="test_download">下载器模块</string>
    <string name="test_other">测试其他工具</string>
    <string name="test_exception">异常检测</string>
    <string name="test_exception_catched">被获取到的异常</string>
    <string name="test_exception_uncatched">没有被获取到的异常</string>
    <string name="exit_app">退出应用程序</string>
    <string name="tables_show">显示所有表</string>
    <string name="table_create">创建表</string>
    <string name="table_drop">删除表</string>
    <string name="table_has">存在表？</string>
    <string name="data_show">显示数据</string>
    <string name="data_insert">插入数据</string>
    <string name="data_update">更新数据</string>
    <string name="data_delete">删除数据</string>
    <string name="test_configure">测试配置器</string>
    <string name="test_resoperate">测试资源读取</string>
    <string name="test_comparator">测试任意对象比较器</string>
    <string name="download_async">异步下载</string>
    <string name="download_pause">暂停下载</string>

</resources>