<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_show_tables"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tables_show" />
    
    <Button
        android:id="@+id/btn_create_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/table_create" />
    
    <Button
        android:id="@+id/btn_drop_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/table_drop" />
    
    <Button
        android:id="@+id/btn_has_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/table_has" />
    
    <Button
        android:id="@+id/btn_show_data"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_show" />
    
	<Button
        android:id="@+id/btn_insert_data"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_insert" />
	
    <Button
        android:id="@+id/btn_update_data"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_update" />

    <Button
        android:id="@+id/btn_delete_data"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_delete" />
    
</LinearLayout>