<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/black" >
        
        <Button
            android:id="@+id/btn_test_inject"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_inject" />
        
        <Button
	        android:id="@+id/btn_test_http"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/test_http" />
        
	    <Button
	        android:id="@+id/btn_test_db"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/test_db" />
        
	    <Button
	        android:id="@+id/btn_test_image"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/test_image" />
	    
	    <Button
	        android:id="@+id/btn_test_other"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/test_other" />
	
	    <Button
	        android:id="@+id/btn_test_download"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/test_download" />
	    
	    <Button
	        android:id="@+id/btn_test_exception"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/test_exception" />
	
	    <Button
	        android:id="@+id/btn_exit_app"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/exit_app" />
    </LinearLayout>

</ScrollView>