<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_test_preference"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_preference" />
    
    <Button
        android:id="@+id/btn_test_propertities"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_propertities" />

    <Button
        android:id="@+id/btn_test_comparator"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_comparator" />

    <TextView
        android:id="@+id/show_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>